[project]
name = "asgi-qtip"
version = "0.2.1"
description = "ASGI application wrapper"
readme = "README.md"
authors = [{ name = "Robert Myers", email = "robert@julython.org" }]
requires-python = ">=3.10"

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "uvicorn[standard]>=0.27.0",
    # Core dependencies we build on
    "svcs>=24.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
database = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29.0", "alembic>=1.13.0"]
redis = ["redis>=5.0"]
all = ["asgi-qtip[database,redis]"]
dev = [
    "asgi-qtip[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "httpx>=0.27",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
qtip = "qtip.cli:main"

[project.urls]
Homepage = "https://github.com/rmyers/qtip"
Documentation = "https://github.com/rmyers/qtip#readme"
Repository = "https://github.com/rmyers/qtip"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/qtip"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["src/qtip"]
branch = true
