[project]
name = "cuneus"
version = "0.2.6"
description = "ASGI application wrapper"
readme = "README.md"
authors = [{ name = "Robert Myers", email = "robert@julython.org" }]
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "click>=8.0",
    "uvicorn[standard]>=0.27.0",
    # Core dependencies we build on
    "svcs>=24.1.0",
    "structlog>=24.1.0",
]

[project.optional-dependencies]
database = ["sqlalchemy[asyncio]>=2.0", "asyncpg>=0.29.0", "alembic>=1.13.0"]
redis = ["redis>=5.0"]
all = ["cuneus[database,redis]"]
dev = [
    "cuneus[all]",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "pytest-mock",
    "httpx>=0.27",
    "asgi-lifespan>=2.1.0",
    "ruff>=0.3",
    "mypy>=1.8",
]

[project.scripts]
cuneus = "cuneus.cli:main"

[project.urls]
Homepage = "https://github.com/rmyers/cuneus"
Documentation = "https://github.com/rmyers/cuneus#readme"
Repository = "https://github.com/rmyers/cuneus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cuneus"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ASYNC"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    # "--test-alembic",
    "--log-cli-level=warning",
    "--cov=cuneus",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--strict-markers",
    "--strict-config",
    "--verbose",
]

[tool.coverage.run]
source = ["src/cuneus"]
branch = true
